button color updated

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -38,7 +38,7 @@
 .button {
     width: 100%;
     padding: 10px;
-    background-color: #0070f3;
+    background-color: #CC3232;
     color: white;
     border: none;
     border-radius: 4px;
